# CSCE-574

./: README.md
agitr/: CMakeLists.txt  hello.cpp  package.xml  pubvel.cpp  subpose.cpp
hw1/: .~lock.hw1_report.docx#  CMakeLists.txt  hw1_report.docx  package.xml  scan_drive_turn.cpp  scan_turn_drive.cpp
hw2/: CMakeLists.txt  README.txt  hw2_report.docx  package.xml  pdcontrol.cpp
hw3_grid_mapper/: CMakeLists.txt  hw3_solo_report.odt  package.xml
hw3_grid_mapper/src/: grid_mapper.cpp
hw3_grid_mapper/stage_stuff/: 2017-02-11-00-31-57.world
hw4_individual/: CMakeLists.txt  package.xml
hw4_individual/src/: grid_mapper4.cpp
