<?xml version="1.0"?>
<package>
  <name>hw2</name>
  <version>0.0.0</version>
  <description>The hw2 package</description>

 
  <maintainer email="idavis@email.sc.edu">idavis</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>

  <export>

  </export>
</package>
